--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "parcial2_pw_sec02_c2_2025_00111522",
   "version": "1.0.0",
   "description": "Segundo parcial de PW",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
+    "dev": "node src/index.js",
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
